# coursework_1

./: .env.example  README.md  config.py  main.py  pyproject.toml
src/: readers.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_serices.py  test_utils.py
